# theta

./: .gitignore  AGENTS.md  AGENT_IMPLEMENTATION_REVIEW_PLAN.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
crates/michin/: AGENTS.md  Cargo.toml
crates/michin-agent-core/: AGENTS.md  Cargo.toml
crates/michin-agent-core/src/: agent.rs  cache_shape.rs  command_policy.rs  compact.rs  error.rs  events.rs  hooks.rs  lib.rs  loop_mod.rs  state.rs  tools.rs  types.rs
crates/michin-agent-core/tests/: agent_tests.rs  command_policy_tests.rs  compact_tests.rs  policy_scenario_matrix.rs
crates/michin-ai/: AGENTS.md  Cargo.toml
crates/michin-ai-net/: Cargo.toml
crates/michin-ai-net/src/: lib.rs  providers.rs
crates/michin-ai-net/src/providers/: openai_codex.rs  openai_compat.rs
crates/michin-ai-net/tests/: integration.rs  openai_codex_tests.rs  openai_compat_tests.rs  streaming_timeout_tests.rs
crates/michin-ai/src/: error.rs  lib.rs  model.rs  provider.rs  providers.rs  replay.rs
crates/michin-ai/tests/: agent_tests.rs
crates/michin-models/: AGENTS.md  Cargo.toml
crates/michin-models/src/: codex.rs  deepseek.rs  lib.rs  openai.rs  opencode.rs  xiaomi.rs
crates/michin-models/tests/: catalog_and_models_tests.rs  opencode_tests.rs
crates/michin-script/: AGENTS.md  Cargo.toml
crates/michin-script/src/: custom_tool.rs  engine.rs  hooks.rs  lib.rs
crates/michin-script/tests/: engine_tests.rs  loader_tests.rs
crates/michin-tui/: AGENTS.md  Cargo.toml
crates/michin-tui/examples/: chat_perf.rs
crates/michin-tui/src/: app.rs  components.rs  keybinding.rs  lib.rs  theme.rs
crates/michin-tui/src/components/: chat.rs  editor.rs  fuzzy.rs  login_flow.rs  mimo_cluster.rs  model_selector.rs  session_picker.rs  settings_selector.rs  status.rs  theme_selector.rs  thinking_selector.rs  tree_selector.rs
crates/michin-tui/tests/: chat_tests.rs  editor_tests.rs  fuzzy_tests.rs  model_selector_tests.rs  selectors_tests.rs
crates/michin/src/: cli.rs  config.rs  fff.rs  interactive.rs  lib.rs  main.rs  mentions.rs  mimo_cluster.rs  oauth.rs  print_mode.rs  prompts.rs  rpc.rs  scripts.rs  session.rs  settings.rs  skills.rs  system_prompt.rs  tools.rs
crates/michin/src/oauth/: codex.rs
crates/michin/src/tools/: bash.rs  edit.rs  fff_find.rs  fff_grep.rs  read.rs  write.rs
crates/michin/tests/: agent_tests.rs  config_tests.rs  interactive_tests.rs  session_tests.rs  system_prompt_tests.rs
crates/theta/: AGENTS.md  Cargo.toml
crates/theta-agent-core/: Cargo.toml
crates/theta-agent-core/src/: agent.rs  command_policy.rs  compact.rs  error.rs  events.rs  hooks.rs  lib.rs  loop_mod.rs  state.rs  tools.rs  types.rs
crates/theta-agent-core/tests/: agent_tests.rs  command_policy_tests.rs  compact_tests.rs  policy_scenario_matrix.rs  state_tests.rs
crates/theta-ai/: AGENTS.md  Cargo.toml
crates/theta-ai-net/src/providers/: openai_codex.rs
crates/theta-ai/src/: error.rs  event.rs  lib.rs  model.rs  provider.rs  replay.rs  types.rs
crates/theta-ai/src/providers/: mod.rs  openai_codex.rs  openai_compat.rs
crates/theta-ai/tests/: event_tests.rs  integration.rs  model_tests.rs  openai_codex_tests.rs  openai_compat_tests.rs  provider_registry_tests.rs  replay_tests.rs  types_tests.rs
crates/theta-models/: AGENTS.md  Cargo.toml
crates/theta-models/src/: codex.rs  deepseek.rs  lib.rs  openai.rs  opencode.rs  xiaomi.rs
crates/theta-models/tests/: catalog_and_models_tests.rs  catalog_tests.rs  codex_tests.rs  deepseek_tests.rs  openai_tests.rs  opencode_tests.rs
crates/theta-script/: AGENTS.md  Cargo.toml
crates/theta-script/src/: engine.rs  hooks.rs  lib.rs  loader.rs
crates/theta-script/tests/: engine_tests.rs  loader_tests.rs
crates/theta-tui/: Cargo.toml
crates/theta-tui/src/: app.rs  components.rs  keybinding.rs  terminal.rs  theme.rs
crates/theta-tui/src/components/: chat.rs  editor.rs  fuzzy.rs  login_flow.rs  mod.rs  model_selector.rs  session_picker.rs  settings_selector.rs  status.rs  thinking_selector.rs  tree_selector.rs
crates/theta-tui/tests/: chat_tests.rs  editor_tests.rs  fuzzy_tests.rs  model_selector_tests.rs  selectors_tests.rs  session_picker_tests.rs  thinking_selector_tests.rs  tree_selector_tests.rs
crates/theta/examples/: dracula.toml
crates/theta/src/: cli.rs  config.rs  interactive.rs  lib.rs  login.rs  main.rs  mentions.rs  mimo_cluster.rs  print_mode.rs  prompts.rs  rpc.rs  scripts.rs  session.rs  settings.rs  system_prompt.rs
crates/theta/src/extensions/: mod.rs
crates/theta/src/oauth/: codex.rs
crates/theta/src/tools/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  read.rs  write.rs
crates/theta/tests/: agent_tests.rs  config_tests.rs  edit_tool_tests.rs  execution_continuity_mock.rs  extensions_tests.rs  interactive_tests.rs  mentions_tests.rs  prompts_tests.rs  rpc_tests.rs  session_tests.rs  system_prompt_tests.rs  tools_tests.rs
