[workspace]
resolver = "3"
members = [
    "crates/theta-ai",
    "crates/theta-agent-core",
    "crates/theta-tui",
    "crates/theta-models",
    "crates/theta",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rohaquinlop/theta"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
eventsource-stream = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
http = "1"
bytes = "1"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Misc
regex = "1"
glob = "0.3"
serde_yaml = "0.9"
similar = "2"
tempfile = "3"
dirs = "6"
base64 = "0.22"
toml = "0.8"
open = "5"
sha2 = "0.10"
rand = "0.8"
url = "2"

# Internal crates
theta-ai = { path = "crates/theta-ai" }
theta-agent-core = { path = "crates/theta-agent-core" }
theta-tui = { path = "crates/theta-tui" }
theta-models = { path = "crates/theta-models" }
