[package]
name = "michin-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent runtime for MichiN"

[dependencies]
michin-ai = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
