[package]
name = "michin-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified multi-provider LLM API for MichiN"
exclude = ["AGENTS.md"]

[features]
default = []
integration-tests = []

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true, optional = true }
eventsource-stream = { workspace = true, optional = true }
