[package]
name = "michin-script"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rhai-powered scriptable hooks for MichiN"

[dependencies]
rhai = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
michin-agent-core = { workspace = true }
michin-ai = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
