[package]
name = "michin-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI library for MichiN"
exclude = ["AGENTS.md"]

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
open = { workspace = true }
unicode-width = "0.2"
nucleo-matcher = { workspace = true }
ratatui-textarea = { workspace = true }
fff-search = { workspace = true }
pulldown-cmark = "0.13"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
