[package]
name = "michin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal terminal coding agent harness in Rust"
exclude = ["AGENTS.md"]

[[bin]]
name = "michin"
path = "src/main.rs"

[dependencies]
michin-ai = { workspace = true }
michin-ai-net = { workspace = true }
michin-agent-core = { workspace = true }
michin-tui = { workspace = true }
michin-models = { workspace = true }
michin-script = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
open = { workspace = true }
rhai = { workspace = true }
