[package]
name = "theta-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent runtime for Theta"

[dependencies]
theta-ai = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
