[package]
name = "theta-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified multi-provider LLM API for Theta"

[features]
default = []
integration-tests = []

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
