[package]
name = "theta-script"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rhai-powered scriptable hooks for Theta"

[dependencies]
rhai = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
theta-agent-core = { path = "../theta-agent-core" }
theta-ai = { path = "../theta-ai" }

[dev-dependencies]
tempfile = { workspace = true }
