[package]
name = "theta"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal terminal coding agent harness in Rust"

[[bin]]
name = "theta"
path = "src/main.rs"

[dependencies]
theta-ai = { workspace = true }
theta-agent-core = { workspace = true }
theta-tui = { workspace = true }
theta-models = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
